Add ipykernel howto

--- a/maze/cliffworld.ipynb
+++ b/maze/cliffworld.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"cliffworld.png\" alt=\"Drawing\" style=\"width: 600px;\"/>"
+    "<img src=\"../images/cliffworld.png\" alt=\"Drawing\" style=\"width: 600px;\"/>"
    ]
   },
   {
@@ -59,9 +59,9 @@
     "from tqdm import tqdm\n",
     "from scipy.stats import sem\n",
     "\n",
-    "from rl_glue import RLGlue\n",
-    "from agent import QLearningAgent, ExpectedSarsaAgent\n",
-    "from environment import CliffWorld"
+    "from source.rl_glue import RLGlue\n",
+    "from source.agent import QLearningAgent, ExpectedSarsaAgent\n",
+    "from source.environment import CliffWorld"
    ]
   },
   {
@@ -141,8 +141,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████| 100/100 [00:30<00:00,  3.27it/s]\n",
-      "100%|███████████████████████████████████████████████████████████| 100/100 [00:43<00:00,  2.31it/s]\n"
+      "100%|█████████████████████████████████████████| 100/100 [00:11<00:00,  8.66it/s]\n",
+      "100%|█████████████████████████████████████████| 100/100 [00:17<00:00,  5.85it/s]\n"
      ]
     },
     {
@@ -228,8 +228,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/holmen1/PycharmProjects/robots/cliffworld/venv/lib/python3.7/site-packages/ipykernel_launcher.py:10: MatplotlibDeprecationWarning: You are modifying the state of a globally registered colormap. This has been deprecated since 3.3 and in 3.6, you will not be able to modify a registered colormap in-place. To remove this warning, you can make a copy of the colormap first. cmap = mpl.cm.get_cmap(\"viridis\").copy()\n",
-      "  # Remove the CWD from sys.path while we load stuff.\n"
+      "/tmp/ipykernel_32784/2046097364.py:10: MatplotlibDeprecationWarning: You are modifying the state of a globally registered colormap. This has been deprecated since 3.3 and in 3.6, you will not be able to modify a registered colormap in-place. To remove this warning, you can make a copy of the colormap first. cmap = mpl.cm.get_cmap(\"viridis\").copy()\n",
+      "  cm.set_bad('gray')\n"
      ]
     },
     {
@@ -289,7 +289,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████| 600/600 [05:08<00:00,  1.95it/s]\n"
+      "100%|█████████████████████████████████████████| 600/600 [01:39<00:00,  6.00it/s]\n"
      ]
     },
     {
@@ -350,6 +350,13 @@
     "plt.xticks(step_sizes)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -368,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
