--- a/pendulum/pendulum.ipynb
+++ b/pendulum/pendulum.ipynb
@@ -63,9 +63,8 @@
     "\n",
     "from source.rl_glue import RLGlue\n",
     "from source.pendulum_env import PendulumEnvironment\n",
-    "from source.agent import BaseAgent\n",
-    "import source.plot_script as ps\n",
-    "import source.tiles3 as tc"
+    "from source.pendulum_agent import ActorCriticSoftmaxAgent\n",
+    "import source.plot_script as ps"
    ]
   },
   {
@@ -90,75 +89,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "racial-newport",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class PendulumTileCoder:\n",
-    "    def __init__(self, iht_size=4096, num_tilings=32, num_tiles=8):\n",
-    "        \"\"\"\n",
-    "        Initializes the MountainCar Tile Coder\n",
-    "        Initializers:\n",
-    "        iht_size -- int, the size of the index hash table, typically a power of 2\n",
-    "        num_tilings -- int, the number of tilings\n",
-    "        num_tiles -- int, the number of tiles. Here both the width and height of the tiles are the same\n",
-    "                            \n",
-    "        Class Variables:\n",
-    "        self.iht -- tc.IHT, the index hash table that the tile coder will use\n",
-    "        self.num_tilings -- int, the number of tilings the tile coder will use\n",
-    "        self.num_tiles -- int, the number of tiles the tile coder will use\n",
-    "        \"\"\"\n",
-    "        \n",
-    "        self.num_tilings = num_tilings\n",
-    "        self.num_tiles = num_tiles \n",
-    "        self.iht = tc.IHT(iht_size)\n",
-    "    \n",
-    "    def get_tiles(self, angle, ang_vel):\n",
-    "        \"\"\"\n",
-    "        Takes in an angle and angular velocity from the pendulum environment\n",
-    "        and returns a numpy array of active tiles.\n",
-    "        \n",
-    "        Arguments:\n",
-    "        angle -- float, the angle of the pendulum between -np.pi and np.pi\n",
-    "        ang_vel -- float, the angular velocity of the agent between -2*np.pi and 2*np.pi\n",
-    "        \n",
-    "        returns:\n",
-    "        tiles -- np.array, active tiles\n",
-    "        \n",
-    "        \"\"\"\n",
-    "        \n",
-    "        ### Use the ranges above and scale the angle and angular velocity between [0, 1]\n",
-    "        # then multiply by the number of tiles so they are scaled between [0, self.num_tiles]\n",
-    "        \n",
-    "        angle_scaled = 0\n",
-    "        ang_vel_scaled = 0\n",
-    "        \n",
-    "        MIN_ANGLE, MAX_ANGLE = -np.pi, np.pi\n",
-    "        MIN_VEL, MAX_VEL = -2*np.pi, 2*np.pi\n",
-    "        \n",
-    "        angle_scale = self.num_tiles / np.abs(MAX_ANGLE - MIN_ANGLE)\n",
-    "        ang_vel_scale = self.num_tiles / np.abs(MAX_VEL - MIN_VEL)\n",
-    "        \n",
-    "        angle_scaled = angle_scale * (MIN_ANGLE + angle)\n",
-    "        ang_vel_scaled = ang_vel_scale * (MIN_VEL + ang_vel)\n",
-    "        \n",
-    "        # Get tiles by calling tc.tileswrap method\n",
-    "        # wrapwidths specify which dimension to wrap over and its wrapwidth\n",
-    "        tiles = tc.tileswrap(self.iht, self.num_tilings, [angle_scaled, ang_vel_scaled], wrapwidths=[self.num_tiles, False])\n",
-    "                    \n",
-    "        return np.array(tiles)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "continental-wiring",
    "metadata": {},
    "source": [
-    "## Create Average Reward Softmax Actor-Critic Agent\n",
-    "\n",
-    "Now that we implemented PendulumTileCoder let's create the agent that interacts with the environment.\n",
+    "## Average Reward Softmax Actor-Critic Agent\n",
     "\n",
     "This agent has two components: an Actor and a Critic. The Actor learns a parameterized policy while the Critic learns a state-value function. The environment has discrete actions; the Actor implementation will use a softmax policy with exponentiated action-preferences. The Actor learns with the sample-based estimate for the gradient of the average reward objective. The Critic learns using the average reward version of the semi-gradient TD(0) algorithm."
    ]
@@ -168,7 +103,7 @@
    "id": "generous-database",
    "metadata": {},
    "source": [
-    "## Compute Softmax Probability\n",
+    "## Softmax Probability\n",
     "\n",
     "This function computes softmax probability for all actions, given actor weights `actor_w` and active tiles `tiles`. This function will be later used in `agent_policy` to sample appropriate action.\n",
     "\n",
@@ -189,13 +124,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "numeric-israel",
+   "cell_type": "markdown",
+   "id": "young-birthday",
    "metadata": {},
-   "outputs": [],
    "source": [
     "def compute_softmax_prob(actor_w, tiles):\n",
+    "    \n",
     "    \"\"\"\n",
     "    Computes softmax probability for all actions\n",
     "    \n",
@@ -205,22 +139,7 @@
     "    \n",
     "    Returns:\n",
     "    softmax_prob - np.array, an array of size equal to num. actions, and sums to 1.\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    # First compute the list of state-action preferences\n",
-    "    state_action_preferences = []\n",
-    "    actions = list(range(3))\n",
-    "    state_action_preferences = [actor_w[a][tiles].sum() for a in actions]\n",
-    "    \n",
-    "    # Set the constant c by finding the maximum of state-action preferences\n",
-    "    c = np.max(state_action_preferences)\n",
-    "    \n",
-    "    numerator = [np.exp(state_action_preference - c) for state_action_preference in state_action_preferences]\n",
-    "    denominator = np.sum(numerator)\n",
-    "\n",
-    "    softmax_prob = [num / denominator for num in numerator]\n",
-    "    \n",
-    "    return softmax_prob"
+    "    \"\"\""
    ]
   },
   {
@@ -230,7 +149,7 @@
    "source": [
     "## Agent Methods\n",
     "\n",
-    "Now that we have implemented helper functions, let's create an agent. We do not need to implement `agent_end()` because there is no termination in our continuing task. \n",
+    "We do not need to implement `agent_end()` because there is no termination in our continuing task. \n",
     "\n",
     "We approximate $q_\\pi$ in the Actor update using one-step bootstrapped return($R_{t+1} - \\bar{R} + \\hat{v}(S_{t+1}, \\mathbf{w})$) subtracted by current state-value($\\hat{v}(S_{t}, \\mathbf{w})$), equivalent to TD error $\\delta$.\n",
     "\n",
@@ -251,166 +170,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "entitled-ecuador",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class ActorCriticSoftmaxAgent(BaseAgent): \n",
-    "    def __init__(self):\n",
-    "        self.rand_generator = None\n",
-    "\n",
-    "        self.actor_step_size = None\n",
-    "        self.critic_step_size = None\n",
-    "        self.avg_reward_step_size = None\n",
-    "\n",
-    "        self.tc = None\n",
-    "\n",
-    "        self.avg_reward = None\n",
-    "        self.critic_w = None\n",
-    "        self.actor_w = None\n",
-    "\n",
-    "        self.actions = None\n",
-    "\n",
-    "        self.softmax_prob = None\n",
-    "        self.prev_tiles = None\n",
-    "        self.last_action = None\n",
-    "    \n",
-    "    def agent_init(self, agent_info={}):\n",
-    "        \"\"\"Setup for the agent called when the experiment first starts.\n",
-    "\n",
-    "        Set parameters needed to setup the semi-gradient TD(0) state aggregation agent.\n",
-    "\n",
-    "        Assume agent_info dict contains:\n",
-    "        {\n",
-    "            \"iht_size\": int\n",
-    "            \"num_tilings\": int,\n",
-    "            \"num_tiles\": int,\n",
-    "            \"actor_step_size\": float,\n",
-    "            \"critic_step_size\": float,\n",
-    "            \"avg_reward_step_size\": float,\n",
-    "            \"num_actions\": int,\n",
-    "            \"seed\": int\n",
-    "        }\n",
-    "        \"\"\"\n",
-    "\n",
-    "        # set random seed for each run\n",
-    "        self.rand_generator = np.random.RandomState(agent_info.get(\"seed\")) \n",
-    "\n",
-    "        iht_size = agent_info.get(\"iht_size\")\n",
-    "        num_tilings = agent_info.get(\"num_tilings\")\n",
-    "        num_tiles = agent_info.get(\"num_tiles\")\n",
-    "\n",
-    "        # initialize self.tc to the tile coder we created\n",
-    "        self.tc = PendulumTileCoder(iht_size=iht_size, num_tilings=num_tilings, num_tiles=num_tiles)\n",
-    "\n",
-    "        # set step-size accordingly (we normally divide actor and critic step-size by num. tilings (p.217-218 of textbook))\n",
-    "        self.actor_step_size = agent_info.get(\"actor_step_size\")/num_tilings\n",
-    "        self.critic_step_size = agent_info.get(\"critic_step_size\")/num_tilings\n",
-    "        self.avg_reward_step_size = agent_info.get(\"avg_reward_step_size\")\n",
-    "\n",
-    "        self.actions = list(range(agent_info.get(\"num_actions\")))\n",
-    "\n",
-    "        # Set initial values of average reward, actor weights, and critic weights\n",
-    "        # We initialize actor weights to three times the iht_size. \n",
-    "        # Recall this is because we need to have one set of weights for each of the three actions.\n",
-    "        self.avg_reward = 0.0\n",
-    "        self.actor_w = np.zeros((len(self.actions), iht_size))\n",
-    "        self.critic_w = np.zeros(iht_size)\n",
-    "\n",
-    "        self.softmax_prob = None\n",
-    "        self.prev_tiles = None\n",
-    "        self.last_action = None\n",
-    "    \n",
-    "    def agent_policy(self, active_tiles):\n",
-    "        \"\"\" policy of the agent\n",
-    "        Args:\n",
-    "            active_tiles (Numpy array): active tiles returned by tile coder\n",
-    "            \n",
-    "        Returns:\n",
-    "            The action selected according to the policy\n",
-    "        \"\"\"\n",
-    "        \n",
-    "        # compute softmax probability\n",
-    "        softmax_prob = compute_softmax_prob(self.actor_w, active_tiles)\n",
-    "        \n",
-    "        # Sample action from the softmax probability array\n",
-    "        # self.rand_generator.choice() selects an element from the array with the specified probability\n",
-    "        chosen_action = self.rand_generator.choice(self.actions, p=softmax_prob)\n",
-    "        \n",
-    "        # save softmax_prob as it will be useful later when updating the Actor\n",
-    "        self.softmax_prob = softmax_prob\n",
-    "        \n",
-    "        return chosen_action\n",
-    "\n",
-    "    def agent_start(self, state):\n",
-    "        \"\"\"The first method called when the experiment starts, called after\n",
-    "        the environment starts.\n",
-    "        Args:\n",
-    "            state (Numpy array): the state from the environment's env_start function.\n",
-    "        Returns:\n",
-    "            The first action the agent takes.\n",
-    "        \"\"\"\n",
-    "\n",
-    "        angle, ang_vel = state\n",
-    "        active_tiles = self.tc.get_tiles(angle, ang_vel)\n",
-    "        current_action = self.agent_policy(active_tiles)\n",
-    "\n",
-    "        self.last_action = current_action\n",
-    "        self.prev_tiles = np.copy(active_tiles)\n",
-    "\n",
-    "        return self.last_action\n",
-    "\n",
-    "\n",
-    "    def agent_step(self, reward, state):\n",
-    "        \"\"\"A step taken by the agent.\n",
-    "        Args:\n",
-    "            reward (float): the reward received for taking the last action taken\n",
-    "            state (Numpy array): the state from the environment's step based on \n",
-    "                                where the agent ended up after the\n",
-    "                                last step.\n",
-    "        Returns:\n",
-    "            The action the agent is taking.\n",
-    "        \"\"\"\n",
-    "\n",
-    "        angle, ang_vel = state\n",
-    "        active_tiles = self.tc.get_tiles(angle, ang_vel)\n",
-    "\n",
-    "        v = self.critic_w[active_tiles].sum()\n",
-    "        v_prev = self.critic_w[self.prev_tiles].sum()\n",
-    "        delta = reward - self.avg_reward + v - v_prev\n",
-    "\n",
-    "        self.avg_reward += self.avg_reward_step_size * delta\n",
-    "        \n",
-    "        self.critic_w[self.prev_tiles] += self.critic_step_size * delta #* 1 #active_tiles\n",
-    "\n",
-    "        # update actor weights\n",
-    "        for a in self.actions:\n",
-    "            if a == self.last_action:\n",
-    "                self.actor_w[a][self.prev_tiles] += self.actor_step_size * delta * (1 - self.softmax_prob[a])\n",
-    "            else:\n",
-    "                self.actor_w[a][self.prev_tiles] += self.actor_step_size * delta * (0 - self.softmax_prob[a])\n",
-    "\n",
-    "        current_action = self.agent_policy(active_tiles)\n",
-    "\n",
-    "        self.prev_tiles = active_tiles\n",
-    "        self.last_action = current_action\n",
-    "\n",
-    "        return self.last_action\n",
-    "\n",
-    "\n",
-    "    def agent_message(self, message):\n",
-    "        if message == 'get avg reward':\n",
-    "            return self.avg_reward\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "stable-stability",
+   "id": "surprising-nursery",
    "metadata": {},
    "source": [
-    "## Run Experiment"
+    "def agent_step(self, reward, state):\n",
+    "\n",
+    "    \"\"\"A step taken by the agent.\n",
+    "    Args:\n",
+    "        reward (float): the reward received for taking the last action taken\n",
+    "        state (Numpy array): the state from the environment's step based on \n",
+    "                            where the agent ended up after the\n",
+    "                            last step.\n",
+    "    Returns:\n",
+    "        The action the agent is taking.\n",
+    "    \"\"\""
    ]
   },
   {
@@ -423,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "spiritual-colonial",
    "metadata": {},
    "outputs": [],
@@ -522,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "critical-perry",
    "metadata": {},
    "outputs": [
@@ -530,7 +304,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 50/50 [02:15<00:00,  2.72s/it]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 50/50 [02:11<00:00,  2.64s/it]\n"
      ]
     }
    ],
@@ -565,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "continued-dealer",
    "metadata": {},
    "outputs": [
@@ -587,12 +361,42 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "waiting-decimal",
+   "cell_type": "markdown",
+   "id": "historic-reserve",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Performance Metric and Meta-Parameter Sweeps\n",
+    "\n",
+    "\n",
+    "### Performance Metric\n",
+    "\n",
+    "To evaluate performance, we plotted both the return and exponentially weighted average reward over time. \n",
+    "\n",
+    "In the first plot, the return is negative because the reward is negative at every state except when the pendulum is in the upright position. As the policy improves over time, the agent accumulates less negative reward, and thus the return decreases slowly. Towards the end the slope is almost flat indicating the policy has stabilized to a good policy. When using this plot however, it can be difficult to distinguish whether it has learned an optimal policy. The near-optimal policy in this Pendulum Swing-up Environment is to maintain the pendulum in the upright position indefinitely, getting near 0 reward at each time step. We would have to examine the slope of the curve but it can be hard to compare the slope of different curves.\n",
+    "\n",
+    "The second plot using exponential average reward gives a better visualization. We can see that towards the end the value is near 0, indicating it is getting near 0 reward at each time step. Here, the exponentially weighted average reward shouldn't be confused with the agent’s internal estimate of the average reward. To be more specific, we used an exponentially weighted average of the actual reward without initial bias (Refer to Exercise 2.7 from the textbook (p.35) to read more about removing the initial bias). If we used sample averages instead, later rewards would have decreasing impact on the average and would not be able to represent the agent's performance with respect to its current policy effectively.\n",
+    "\n",
+    "It is easier to see whether the agent has learned a good policy in the second plot than the first plot. If the learned policy is optimal, the exponential average reward would be close to 0.\n",
+    "\n",
+    "Furthermore, how did we pick the best meta-parameter from the sweeps? A common method would be to pick the meta-parameter that results in the largest Area Under the Curve (AUC). However, this is not always what we want. We want to find a set of meta-parameters that learns a good final policy. When using AUC as the criteria, we may pick meta-parameters that allows the agent to learn fast but converge to a worse policy. In our case, we selected the meta-parameter setting that obtained the most exponential average reward over the last 5000 time steps. \n",
+    "\n",
+    "\n",
+    "### Parameter Sensitivity\n",
+    "\n",
+    "In addition to finding the best meta-parameters it is also equally important to plot **parameter sensitivity curves** to understand how our algorithm behaves.\n",
+    "\n",
+    "In our simulated Pendulum problem, we can extensively test our agent with different meta-parameter configurations but it would be quite expensive to do so in real life. Parameter sensitivity curves can provide us insight into how our algorithms might behave in general. It can help us identify a good range of each meta-parameters as well as how sensitive the performance is with respect to each meta-parameter.\n",
+    "\n",
+    "Here are the sensitivity curves for the three step-sizes we swept over:\n",
+    "\n",
+    "<img src=\"images/sensitivity_combined.png\" alt=\"Drawing\" style=\"width: 1000px;\"/>\n",
+    "\n",
+    "On the y-axis we use the performance measure, which is the average of the exponential average reward over the 5000 time steps, averaged over 50 different runs. On the x-axis is the meta-parameter we are testing. For the given meta-parameter, the remaining meta-parameters are chosen such that it obtains the best performance.\n",
+    "\n",
+    "The curves are quite rounded, indicating the agent performs well for these wide range of values. It indicates that the agent is not too sensitive to these meta-parameters. Furthermore, looking at the y-axis values we can observe that average reward step-size is particularly less sensitive than actor step-size and critic step-size.\n",
+    "\n",
+    "But how do we know that we have sufficiently covered a wide range of meta-parameters? It is important that the best value is not on the edge but in the middle of the meta-parameter sweep range in these sensitivity curves. Otherwise this may indicate that there could be better meta-parameter values that we did not sweep over."
+   ]
   }
  ],
  "metadata": {
