--- a/maze/cliffworld.ipynb
+++ b/maze/cliffworld.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"../images/cliffworld.png\" alt=\"Drawing\" style=\"width: 600px;\"/>"
+    "<img src=\"./images/cliffworld.png\" alt=\"Drawing\" style=\"width: 600px;\"/>"
    ]
   },
   {
@@ -35,16 +35,6 @@
    "metadata": {},
    "source": [
     "The agent starts in the bottom left corner of the gridworld below and takes actions that move it in the four directions. Actions that would move the agent off of the cliff incur a reward of -100 and send the agent back to the start state. The reward for all other transitions is -1. An episode terminates when the agent reaches the bottom right corner. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Preamble, adds virtual environment to Jupyter\n",
-    ">pip install ipykernel\n",
-    "\n",
-    ">python -m ipykernel install --name=venv"
    ]
   },
   {
@@ -60,8 +50,9 @@
     "from scipy.stats import sem\n",
     "\n",
     "from source.rl_glue import RLGlue\n",
-    "from source.agent import QLearningAgent, ExpectedSarsaAgent\n",
-    "from source.environment import CliffWorld"
+    "from source.q_learning_agent import QLearningAgent\n",
+    "from source.expected_sarsa_agent import ExpectedSarsaAgent\n",
+    "from source.cliffworld_environment import CliffWorld"
    ]
   },
   {
@@ -141,8 +132,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 100/100 [00:11<00:00,  8.66it/s]\n",
-      "100%|█████████████████████████████████████████| 100/100 [00:17<00:00,  5.85it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 100/100 [00:10<00:00,  9.24it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 100/100 [00:15<00:00,  6.36it/s]\n"
      ]
     },
     {
@@ -228,7 +219,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_32784/2046097364.py:10: MatplotlibDeprecationWarning: You are modifying the state of a globally registered colormap. This has been deprecated since 3.3 and in 3.6, you will not be able to modify a registered colormap in-place. To remove this warning, you can make a copy of the colormap first. cmap = mpl.cm.get_cmap(\"viridis\").copy()\n",
+      "/tmp/ipykernel_27845/3030650617.py:11: MatplotlibDeprecationWarning: You are modifying the state of a globally registered colormap. This has been deprecated since 3.3 and in 3.6, you will not be able to modify a registered colormap in-place. To remove this warning, you can make a copy of the colormap first. cmap = mpl.cm.get_cmap(\"viridis\").copy()\n",
       "  cm.set_bad('gray')\n"
      ]
     },
@@ -255,6 +246,7 @@
     "    plt.title(algorithm)\n",
     "    plt.axis('off')\n",
     "    cm = plt.get_cmap()\n",
+    "    #cm = plt.cm.get_cmap(\"viridis\").copy()\n",
     "    cm.set_bad('gray')\n",
     "\n",
     "    plt.subplots_adjust(bottom=0.0, right=0.7, top=1.0)\n",
@@ -289,7 +281,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 600/600 [01:39<00:00,  6.00it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 600/600 [01:33<00:00,  6.41it/s]\n"
      ]
     },
     {
@@ -350,13 +342,6 @@
     "plt.xticks(step_sizes)\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
