--- a/maze/shortcut.ipynb
+++ b/maze/shortcut.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "In this maze environment, the goal is to reach the goal state (G) as fast as possible from the starting state (S). There are four actions (up, down, right, left) which take the agent deterministically from a state to the corresponding neighboring states, except when movement is blocked by a wall (denoted by grey) or the edge of the maze, in which case the agent remains where it is. The reward is +1 on reaching the goal state, 0 otherwise. On reaching the goal state G, the agent returns to the start state S to begin a new episode. This is a discounted, episodic task with $\\gamma = 0.95$.\n",
     "\n",
-    "<img src=\"./images/shortcut_env.png\" alt=\"environment\" width=\"400\"/>"
+    "<img src=\"./images/shortcut_env.png\" alt=\"environment\" width=\"1000\"/>"
    ]
   },
   {
@@ -38,8 +38,8 @@
     "from tqdm import tqdm\n",
     "\n",
     "from source.rl_glue import RLGlue\n",
-    "from source.agent import DynaQAgent, DynaQPlusAgent\n",
-    "from source.environment import ShortcutMazeEnvironment"
+    "from source.dyna_q_agent import DynaQAgent, DynaQPlusAgent\n",
+    "from source.shortcut_environment import ShortcutMazeEnvironment"
    ]
   },
   {
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./images/dynaqAlgorithm.png\" alt=\"environment\" width=\"400\"/>"
+    "<img src=\"./images/dynaqAlgorithm.png\" alt=\"environment\" width=\"700\"/>"
    ]
   },
   {
@@ -151,7 +151,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████| 30/30 [00:07<00:00,  3.98it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 30/30 [00:06<00:00,  4.40it/s]\n"
      ]
     },
     {
@@ -165,7 +165,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████| 30/30 [00:10<00:00,  2.90it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 30/30 [00:09<00:00,  3.06it/s]\n"
      ]
     },
     {
@@ -179,7 +179,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████| 30/30 [01:05<00:00,  2.19s/it]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 30/30 [01:06<00:00,  2.21s/it]\n"
      ]
     },
     {
@@ -342,7 +342,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████| 10/10 [00:11<00:00,  1.11s/it]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 10/10 [00:11<00:00,  1.13s/it]\n"
      ]
     },
     {
@@ -356,7 +356,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████| 10/10 [00:20<00:00,  2.01s/it]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 10/10 [00:19<00:00,  1.98s/it]\n"
      ]
     },
     {
@@ -435,6 +435,7 @@
     "        plt.title(titles[i])\n",
     "        plt.axis('off')\n",
     "        cm = plt.get_cmap()\n",
+    "        #cm = plt.get_cmap(\"viridis\").copy()\n",
     "        cm.set_bad('gray')\n",
     "\n",
     "    plt.subplots_adjust(bottom=0.0, right=0.7, top=1.0)\n",
@@ -452,7 +453,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_32982/4256104304.py:21: MatplotlibDeprecationWarning: You are modifying the state of a globally registered colormap. This has been deprecated since 3.3 and in 3.6, you will not be able to modify a registered colormap in-place. To remove this warning, you can make a copy of the colormap first. cmap = mpl.cm.get_cmap(\"viridis\").copy()\n",
+      "/tmp/ipykernel_28791/435132460.py:22: MatplotlibDeprecationWarning: You are modifying the state of a globally registered colormap. This has been deprecated since 3.3 and in 3.6, you will not be able to modify a registered colormap in-place. To remove this warning, you can make a copy of the colormap first. cmap = mpl.cm.get_cmap(\"viridis\").copy()\n",
       "  cm.set_bad('gray')\n"
      ]
     },
@@ -505,7 +506,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████| 30/30 [01:09<00:00,  2.31s/it]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 30/30 [01:07<00:00,  2.24s/it]\n"
      ]
     }
    ],
@@ -591,7 +592,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_32982/4256104304.py:21: MatplotlibDeprecationWarning: You are modifying the state of a globally registered colormap. This has been deprecated since 3.3 and in 3.6, you will not be able to modify a registered colormap in-place. To remove this warning, you can make a copy of the colormap first. cmap = mpl.cm.get_cmap(\"viridis\").copy()\n",
+      "/tmp/ipykernel_28791/435132460.py:22: MatplotlibDeprecationWarning: You are modifying the state of a globally registered colormap. This has been deprecated since 3.3 and in 3.6, you will not be able to modify a registered colormap in-place. To remove this warning, you can make a copy of the colormap first. cmap = mpl.cm.get_cmap(\"viridis\").copy()\n",
       "  cm.set_bad('gray')\n"
      ]
     },
@@ -618,13 +619,6 @@
    "source": [
     "Before the shortcut opens up, like Dyna-Q, the Dyna-Q+ agent finds the sole, long path to the goal. But because the Dyna-Q+ agent keeps exploring, it succeeds in discovering the shortcut once it opens up, which leads to the goal faster. So the bonus reward heuristic is effective in helping the agent explore and find changes in the environment without degrading the performance. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
