--- a/lunar-lander/original/Course4ProgrammingAssignment2-v4.ipynb
+++ b/lunar-lander/original/Course4ProgrammingAssignment2-v4.ipynb
@@ -2206,7 +2206,7 @@
    "launcher_item_id": "4O5gG"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2220,7 +2220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
